[tool.poetry]
name = "cw-4-ind47"
version = "0.1.0"
description = ""
authors = ["Chernokozov Yuriy <Chernokozovyu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
